# Bazel_Breadbourd

./: README.md
external_dep/01-depend_on_bazel_module/: BUILD  MODULE.bazel  README.md  WORKSPACE  bazel-01-depend_on_bazel_module  bazel-bin  bazel-out  bazel-testlogs  main.cc
external_dep/02-override_bazel_module/: BUILD  MODULE.bazel  bazel-02-override_bazel_module  bazel-bin  bazel-out  bazel-testlogs  main.cc
external_dep/02-override_bazel_module/lib_a/: BUILD  MODULE.bazel  lib_a.cc  lib_a.h
external_dep/03-introduce_dependencies_with_module_extension/: BUILD  MODULE.bazel  WORKPACE.bzlmod  WORKSPACE  bazel-03-introduce_dependencies_with_module_extension  bazel-bin  bazel-out  bazel-testlogs  deps.bzl
external_dep/03-introduce_dependencies_with_module_extension/lib_a/: BUILD  WORKSPACE  deps.bzl
external_dep/04-local_config_and_register_toolchains/: BUILD  MODULE.bazel  bazel-04-local_config_and_register_toolchains  bazel-bin  bazel-out  bazel-testlogs  local_config_sh.bzl  sh_path.bzl
first_build_tutorial/examples/cpp-tutorial/stage3/main/: BUILD
first_macro_tutorial/: README.md  bazel-bin  bazel-first_macro_tutorial  bazel-out  bazel-testlogs
first_macro_tutorial/function_bzl_file_test/: BUILD  miniature.bzl  my_app.cc
first_macro_tutorial/genrule_test/: my_app.cc
first_rule/: BUILD  bazel-bin  bazel-first_rule  bazel-out  bazel-testlogs  foo.bzl
grpc_bazel_mod/: MODULE.bazel  bazel-bin  bazel-grpc_bazel_mod  bazel-out  bazel-testlogs
